# graveyard-slide-desktop

./: .gitignore  DEVELOPMENT.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build-dmg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dmg-images/: make_dmg.py
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
